Fixed spacing for more row info

--- a/knit_tracker_app/app/components/KnittingGrid.module.css
+++ b/knit_tracker_app/app/components/KnittingGrid.module.css
@@ -1,6 +1,6 @@
 .projectHeaders {
     display: flex;
-    gap: 375px;
+    gap: 397px;
 }
 
 .stitch {
